# genesis-frontend

./: ECOSYSTEM_DOCTRINE.md  FRONTEND_DOCTRINE.toml  README.md  __init__.py  base_agent.py  config.py  exceptions.py  pyproject.toml  template_helpers.py  utils.py  validators.py
agents/: __init__.py  ai_powered_features.py  base_agent.py  component_types.py  design_system_auto.py  nextjs_agent.py  performance_agent.py  react_agent.py  testing_optimization.py  ui_agent.py  vue_agent.py
core/: __init__.py  logging.py  optimization.py  validation.py
genesis_frontend/: __init__.py
genesis_frontend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genesis_frontend/core/: __init__.py  multi_repo.py  repo.py
tests/: conftest.py  test_agents.py  test_optimizer.py
tests/python/: test_agents.py  test_multi_repo.py  test_repo.py
